# flask-app-recicla

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt  settings.toml
app/: __init__.py  admin.py  models.py  routes.py
app/static/css/: style-index.css  style-solicita.css  style.css
app/templates/: ajuda.html  coleta.html  notfound-404.html  ordem_coleta.html  show_coleta.html  user.html  users.html
projeto/: app.py  database.py  requirements.txt
projeto/migrations/versions/: b8a7c0d32f35_.py
projeto/static/css/: style-index.css  style-register.css  style.css
projeto/templates/: base.html  coleta.html  index copy.html  index.html  login.html  ordem_coleta.html  register.html  show_coleta.html  user.html  users.html
projeto/templates/components/: notifications.html
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_urls.py  test_ward_urls.py
