[tool.poetry]
name = "projeto-flask-recicla"
version = "0.1.0"
description = ""
authors = ["igorsenna <engenheirostrauss2@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_flask_recicla"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
psycopg2-binary = "^2.9.5"
flask-bootstrap = "^3.3.7.1"
flask-admin = "^1.6.0"
flask-sqlalchemy = "^3.0.3"
sqlalchemy-serializer = "^1.4.1"
flask-migrate = "^4.0.4"
flask-login = "0.6.2"
flask-wtf = "^1.1.1"
flask-bootstrap4 = "^4.0.2"
wtforms = "2.3.3"
dynaconf = "^3.1.11"
pytest = "^7.2.1"
pytest-flask = "^1.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
testcase = "^0.1.0"
flask-testing = "^0.8.1"
ward = "^0.67.2b0"
splinter = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
